# addin-template

./: CMakeLists.txt  README.md  sonar-project.properties
.github/workflows/: android.yml  desktop.yml  main.yml  mobile.yml  sonar  sonar.yml
include/: AddInDefBase.h  ComponentBase.h  types.h
src/: Component.cpp  Component.h  Library.cpp  SampleAddIn.cpp  SampleAddIn.h  addin.def  dllmain.cpp  exports.cpp  jnienv.cpp  jnienv.h  stdafx.h
